# dune-no-ocaml

./: .gitignore  .zshrc  Dockerfile  Dockerfile.no-ocaml  dune  fake_dune.sh  fake_ocamlc.sh  readme.md
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
